k8s-specifiations/service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-game  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 2048-game
  template:
    metadata:
      labels:
        app: 2048-game
    spec:
      containers:
      - name: 2048-game
        image: 2048gamecontainerregistry.azurecr.io/2048-game:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: 2048-game
